tests/ui/opts/plain_crate_arg.stderr
error: expected `=`
 --> tests/ui/opts/plain_crate_arg.rs:4:10
  |
4 | #[funcmap(crate)]
  |          ^^^^^^^
